# free-genai-bootcamp-2025

./: .gitignore  .windsurfrules  README.md
genai-architechting/: README.md
lang-portal/: study-activities.md
lang-portal/backend/: .air.toml  .golangci.yml  API_ROUTES.md  Makefile  README.md  code-conventions.md  go.mod  go.sum  lang-portal.db  lang_portal.db  main.go  swagger.json
lang-portal/backend/db/: README.md  init.sh  schema.sql
lang-portal/backend/docs/: docs.go  swagger.json  swagger.yaml
lang-portal/backend/plans/: execution.md
lang-portal/backend/scripts/: init_database.sh  init_db.sh
lang-portal/backend/seeds/: groups.csv  word_groups.csv  words.csv
lang-portal/frontend/: .eslintrc.cjs  EXECUTION_PLAN.md  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
listening-comp/: README.md  homework.md  pyproject.toml  requirements.txt
listening-comp/backend/: audio_generator.py  chat.py  extract_structured_data_genai.py  process_transcripts.py  rag.py  structured_data.py  transcript.py  vector_db.py
listening-comp/backend/structured_transcripts/: transcript_162def70_structured.json  transcript_1bcf99e6_structured.json  transcript_328b2c45_structured.json  transcript_48cbec52_structured.json  transcript_59bd98ca_structured.json  transcript_8694dc26_structured.json  transcript_988705c5_structured.json  transcript_KXXp0fhHZys_structured.json  transcript_ijOqyASjgoM_structured.json
listening-comp/backend/transcripts/: transcript_KXXp0fhHZys.json  transcript_ijOqyASjgoM.json
listening-comp/frontend/: main.py
listening-comp/prompts/: structured_data.md
opea-comps/: README.md
sentence-constructor/: README.md
sentence-constructor/chatgpt/: README.md  prompt.md
sentence-constructor/claude/: README.md  prompt.md
sentence-constructor/gemini/: README.md
sentence-constructor/grok/: README.md  prompt.md
sentence-constructor/meta/: README.md
writing-app/: README.md  app.py  pyproject.toml
(+81 files in other folders)
