[tool.poetry]
name = "listening-comp"
version = "0.1.0"
description = ""
authors = ["pavittarx <pavittarx>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
streamlit = "^1.42.2"
chromadb = "^0.6.3"
youtube-transcript-api = "^0.6.3"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.4.1"
gtts = "^2.5.0"
openai = "^1.12.0"
torch = "^2.1.2"
transformers = "^4.37.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
