[tool.poetry]
name = "writing-app"
version = "0.1.0"
description = ""
authors = ["pavittarx <29155477+pavittarx@users.noreply.github.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"